--- a/_xy2401_server.conf
+++ b/_xy2401_server.conf
@@ -1,7 +1,6 @@
-
 server {
-    listen      xy2401_local_server_listen ;
-    server_name  localhost;
+    listen      xy2401_local_server_listen ; 
+    charset utf-8;
     autoindex on; 
     location / {
         root    xy2401_local_server_root;
