--- a/script/default-apache.conf
+++ b/script/default-apache.conf
@@ -3,14 +3,13 @@ Listen xy2401_local_server_listen
 <VirtualHost *:xy2401_local_server_listen>
         ServerAdmin webmaster@localhost
         DocumentRoot xy2401_local_server_root
-        ErrorLog ${APACHE_LOG_DIR}/error.log
-        CustomLog ${APACHE_LOG_DIR}/access.log combined
 
         DirectoryIndex index.html index.htm welcome.html
         AddDefaultCharset utf-8 
        
         <Directory xy2401_local_server_root> 
           Options Indexes FollowSymLinks
+          IndexOptions Charset=UTF-8
           AllowOverride None
           Require all granted
         </Directory>
