--- a/script/default-apache.conf
+++ b/script/default-apache.conf
@@ -12,6 +12,9 @@ Listen xy2401_local_server_listen
           IndexOptions Charset=UTF-8
           AllowOverride None
           Require all granted
+
+          #AddOutputFilterByType SUBSTITUTE text/html
+          #Substitute "s##sub_filter_string##sub_filter_replacement/ni"
         </Directory>
 </VirtualHost>
 
