--- a/script/default-apache.conf
+++ b/script/default-apache.conf
@@ -14,7 +14,7 @@ Listen xy2401_local_server_listen
           Require all granted
 
           #AddOutputFilterByType SUBSTITUTE text/html
-          #Substitute "s##sub_filter_string##sub_filter_replacement/ni"
+          #Substitute "s##sub_filter_string##sub_filter_replacement"
         </Directory>
 </VirtualHost>
 
